my-cluster-manifestos/deployuserdata.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webuserdata
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webuserdata
  template:
    metadata:
      labels:
        app: webuserdata
    spec:
      containers:
        - image: rabadan4ik/rabadan
          name: webuserdata
          ports:
            - containerPort: 80
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 5000
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 5000
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 10
      imagePullSecrets:
        - name: my-registry-credentials
  strategy:
    type: Recreate
