my-cluster-manifestos/servicerunresult.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webrunresult
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: webrunresult
  type: ClusterIP
