my-cluster-manifestos/servicewebuser.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webuser
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: webuserdata
  type: ClusterIP
