my-cluster-manifestos/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: webuser
            port:
              number: 80
      - path: "/run_result"
        pathType: Prefix
        backend:
          service:
            name: webrunresult
            port:
              number: 80
